added about, picture and form pages

--- a/tindarapp/templates/tindarapp/pantanir.html
+++ b/tindarapp/templates/tindarapp/pantanir.html
@@ -1,5 +1,12 @@
 {% extends "tindarapp/base.html" %}
 {% load staticfiles %}
 {% block content %}
-<h1>Pantanir</h1>
+<div class="container">
+  <h1>Pantanir</h1>
+  <form method="post">
+    {{form.as_p}}
+    {% csrf_token %}
+    <input type="submit" class="btn btn-primary" value="Submit">
+  </form>
+</div>
 {% endblock %}
