--- a/tindarapp/templates/tindarapp/base.html
+++ b/tindarapp/templates/tindarapp/base.html
@@ -4,7 +4,10 @@
   <head>
     <meta charset="utf-8">
     <title>Tindatríóið</title>
+    <link rel="shortcut icon" type="image/png" href="{% static 'img/favicon/favicon.ico' %}"/>
+
     <!-- Latest compiled and minified CSS -->
+
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <!-- Optional theme -->
@@ -18,16 +21,16 @@
 
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-custom">
   <a class="navbar-brand" href="{% url 'index' %}">Tindtríóið</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+  <button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
-      <a class="nav-item nav-link active" href="{% url 'index' %}">Tindatríóið<span class="sr-only">(current)</span></a>
+      <a class="nav-item nav-link active" href="{% url 'tindarapp:myndir' %}">Myndaalbúm<span class="sr-only">(current)</span></a>
       <a class="nav-item nav-link" href="{% url 'tindarapp:about' %}">Um okkur</a>
-      <a class="nav-item nav-link" href="{% url 'tindarapp:pantanir' %}">Pantanir</a>
+      <a class="nav-item nav-link" href="{% url 'tindarapp:form_name_view' %}">Pantanir</a>
     </div>
   </div>
 </nav>
