send email every time something comes into db+admin interface

--- a/tindarapp/templates/tindarapp/base.html
+++ b/tindarapp/templates/tindarapp/base.html
@@ -31,6 +31,7 @@
       <a class="nav-item nav-link active" href="{% url 'tindarapp:myndir' %}">Myndaalbúm<span class="sr-only">(current)</span></a>
       <a class="nav-item nav-link" href="{% url 'tindarapp:about' %}">Um okkur</a>
       <a class="nav-item nav-link" href="{% url 'tindarapp:form_name_view' %}">Pantanir</a>
+      <a class="nav-item nav-link" href="{% url 'admin:index' %}">Starfsmenn</a></li>
     </div>
   </div>
 </nav>
