--- a/tindarapp/templates/tindarapp/pantanir.html
+++ b/tindarapp/templates/tindarapp/pantanir.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="container">
   <h1>Pantanir</h1>
-  <form method="post">
+  <form method="POST">
     {{form.as_p}}
     {% csrf_token %}
     <input type="submit" class="btn btn-primary" value="Submit">
